--- a/GestionDesCongee/GCongée/project/src/app/user-desc/user-desc.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/user-desc/user-desc.component.html
@@ -3,7 +3,7 @@
 
 <div class="userDesc">
     <div class="img">
-        <img [src]="'http://127.0.0.1:5000/getImage/'+data.image"  alt="">
+        <img [src]="'https://congee-app-services-pro.onrender.com/getImage/'+data.image"  alt="">
     </div>
     <div class="content">
         <h3 >{{data.nomPrenom}}</h3>
