--- a/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.html
@@ -34,7 +34,7 @@
               </div> 
     
                <div class="img">
-                <img [src]="'http://127.0.0.1:5000/getImage/' + data.image"  alt="">
+                <img [src]="'https://congee-app-services-pro.onrender.com/getImage/' + data.image"  alt="">
                </div>
 
               <div style="display:flex; flex-direction: column;  margin-top: 10px;"> 
