--- a/GestionDesCongee/GCongée/project/src/app/rh-list-congee/rh-list-congee.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/rh-list-congee/rh-list-congee.component.html
@@ -52,7 +52,7 @@
           <tr *ngFor="let i of data|  filter: { searchText: searchText, selectedResponse: selectedResponse } | paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: totalRecords }">
             <td data-label="titre">{{i.matricule}}</td>
             <td data-label="nom et prénom">{{i.nomPrenom}}</td>
-            <td data-label="image"  ><img style="width: 50px; height: 50px; border-radius: 50px;" [src]="'http://127.0.0.1:5000/getImage/' + i.image" /></td>
+            <td data-label="image"  ><img style="width: 50px; height: 50px; border-radius: 50px;" [src]="'https://congee-app-services-pro.onrender.com/getImage/' + i.image" /></td>
             <td data-label="début de congée">{{formatDate(i.dateD)}}</td>
             <td data-label="fin de congée">{{formatDate(i.dateF)}}</td>
             <td data-label="type de congée">{{i.type}}</td>
