--- a/GestionDesCongee/GCongée/project/src/app/list-employee/list-employee.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/list-employee/list-employee.component.html
@@ -16,7 +16,7 @@
 <div class="gridList">
     <div *ngFor="let i of data | filterEmploye:searchText | paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: totalRecords }">
         <div class="card">
-            <img [src]="'http://127.0.0.1:5000/getImage/'+i.image">
+            <img [src]="'https://congee-app-services-pro.onrender.com/getImage/'+i.image">
             <div class="info-container">
             <div class="info">    
             <h2>{{i.nomPrenom}}</h2>
