--- a/GestionDesCongee/GCongée/project/src/app/chef-navbar/chef-navbar.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/chef-navbar/chef-navbar.component.html
@@ -33,7 +33,7 @@
               </div> 
     
                <div class="img">
-                <img [src]="'http://127.0.0.1:5000/getImage/' + data.image"  alt="">
+                <img [src]="'https://congee-app-services-pro.onrender.com/getImage/' + data.image"  alt="">
                </div>
              
     
