--- a/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.css
+++ b/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.css
@@ -113,4 +113,13 @@ align-items: center;
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
+  @media screen and (max-width: 600px) {
+
+    .dropdown-content{
+        width: 380px;
+        margin-right: 260px;
+        margin-top: 40px;
+    }
+   
+}
   
