--- a/GestionDesCongee/GCongée/project/src/app/ajouter-employe/ajouter-employe.component.scss
+++ b/GestionDesCongee/GCongée/project/src/app/ajouter-employe/ajouter-employe.component.scss
@@ -77,5 +77,13 @@
   .ajout-btn:hover {
     background-color: #215188;
   }
-
+     @media (max-width: 600px) {
+    igx-dialog{
+          width: 100%;
+          height: 50vh;
+      }
+    .form{
+      width: 100%;
+      height: 100%;
+    }
   
