--- a/GestionDesCongee/GCongée/project/src/app/chef-demande/chef-demande.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/chef-demande/chef-demande.component.html
@@ -1,89 +1,107 @@
 <app-chef-navbar></app-chef-navbar>
-<div class="sample-split">
-    <igx-buttongroup [values]="modes" (selected)="toggleModes($event)">
-    </igx-buttongroup>
+<div class="contain" >
+
+<div class="card">
+    <div class="card-header">
+      <h2>Comment passer un congé</h2>
+    </div>
+    <div class="card-body">
+      <p>Pour passer un congé sur ce site, il faut suivre quelques étapes simples :</p>
+      <ol>
+        <li>Sélectionnez le type de congé que vous souhaitez prendre à l'aide de l'option de sélection fournie.</li>
+        <li>Choisissez la date de début et la date de fin de votre congé en utilisant le sélecteur de date. Vous devez vous assurer que la date de retour est supérieure à la date de départ pour que votre demande soit valide.</li>
+        <li>Téléchargez une image qui servira de pièce justificative pour votre demande de congé. L'image doit être de type JPG ou PNG et ne doit pas dépasser 2 Mo.</li>
+      </ol>
+    </div>
 </div>
-
-<igx-stepper #stepper [linear]="linear">
-
-    <ng-template igxStepActiveIndicator>
-        <igx-icon>edit</igx-icon>
-    </ng-template>
-
-    <igx-step #step1 >
-        <span igxStepTitle>type de congée</span>
-        <div igxStepContent>
-            <!--<form #form1="ngForm">-->
-                <igx-select #select [(ngModel)]="user.item" >
-                    <label igxLabel>type du congée</label>
-                    <igx-select-item *ngFor="let item of user.items" [value]="item" required>
-                        {{item}}
-                    </igx-select-item>
-                </igx-select>
-                <p class="err" *ngIf="user.item === ''">* ce champ ne doit pas etre vide</p>
-           <!-- </form>-->
-            <div class="sample-step-actions">
-                <button class="btn" igxButton="raised" (click)="stepper.next()"
-                    [disabled]="stepper.linear">suivant</button>
-            </div>
-        </div>
-    </igx-step>
-
-    <igx-step #step2 >
-        <span igxStepTitle>durée du congée</span>
-        <div igxStepContent>
-          
-               
-                    <igx-date-picker [(ngModel)]="user.dateDepart"  required>
-                        <label igxLabel>Date du début</label>
-                    </igx-date-picker>
-         
-                    <igx-date-picker [(ngModel)]="user.dateRetour" required>
-                        <label igxLabel>Date du fin</label>
-                    </igx-date-picker>
-      <div class="err" *ngIf="!isDateRetourSupDateDepart()">*les dates ne doivent pas étre dépassé La date de retour doit être supérieur à la date de départ.</div>
-         
-                 
-     
-           
-            <div class="sample-step-actions">
-                <button class="btn" igxButton="raised" (click)="stepper.prev()">précédent</button>
-                <button class="btn" igxButton="raised" (click)="stepper.next()"
-                    [disabled]="stepper.linear"  >suivant</button>
-            </div>
-        </div>
-    </igx-step>
-
- 
-
-
-
-    <igx-step #step3>
-        <span igxStepTitle>confirmation</span>
-        <div igxStepContent>
-           
-            <input style="color: black;
-            background-color: rgb(0, 145, 255);" type="file" (change)="selectImage($event)" required >
-            <p class="err" *ngIf="!controleFileType">* le type de l'image doit étre jpg ou png </p>
-            <p class="err" *ngIf="!controleFileSize">* la taile de l'image ne doit pas dépasser 2mg</p>
-            
-
-            <div class="sample-step-actions">
-                <button class="btn" igxButton="raised" (click)="stepper.prev()">précédent</button>
-                <button class="btn" igxButton="raised" (click)="stepper.reset()">Reset</button>
-                <button class="btn" igxButton="raised" (click)="sendData()"  (click)="alert.open()">confirme</button>
-                <igx-dialog #alert
-                [title]="Alerttitle"
-                [message]="message "
-                leftButtonLabel="OK"
-                leftButtonColor="black"
-                leftButtonBackgroundColor="#0091FF"
-                (leftButtonSelect)="alert.close()" >
-                </igx-dialog>
-            </div>
-        </div>
-    </igx-step>
-
+<div class="congee_contain">
+    <div class="sample-split">
+        <igx-buttongroup [values]="modes" (selected)="toggleModes($event)">
+        </igx-buttongroup>
+    </div>
     
-
-</igx-stepper>
+    <igx-stepper [orientation]="orientation" #stepper [linear]="linear">
+    
+        <ng-template igxStepActiveIndicator>
+            <igx-icon>edit</igx-icon>
+        </ng-template>
+    
+        <igx-step #step1 >
+            <span igxStepTitle>type de congée</span>
+            <div igxStepContent>
+                <!--<form #form1="ngForm">-->
+                    <igx-select #select [(ngModel)]="user.item" >
+                        <label igxLabel>type du congée</label>
+                        <igx-select-item *ngFor="let item of user.items" [value]="item" required>
+                            {{item}}
+                        </igx-select-item>
+                    </igx-select>
+                    <p class="err" *ngIf="user.item === ''">* ce champ ne doit pas etre vide</p>
+               <!-- </form>-->
+                <div class="sample-step-actions">
+                    <button class="btn" igxButton="raised" (click)="stepper.next()"
+                        [disabled]="stepper.linear">suivant</button>
+                </div>
+            </div>
+        </igx-step>
+    
+        <igx-step #step2 >
+            <span igxStepTitle>durée du congée</span>
+            <div igxStepContent>
+              
+                   
+                        <igx-date-picker [(ngModel)]="user.dateDepart"  required>
+                            <label igxLabel>Date du début</label>
+                        </igx-date-picker>
+             
+                        <igx-date-picker [(ngModel)]="user.dateRetour" required>
+                            <label igxLabel>Date du fin</label>
+                        </igx-date-picker>
+          <div class="err" *ngIf="!isDateRetourSupDateDepart()">*les dates ne doivent pas étre dépassé La date de retour doit être supérieur à la date de départ.</div>
+             
+                     
+         
+               
+                <div class="sample-step-actions">
+                    <button class="btn" igxButton="raised" (click)="stepper.prev()">précédent</button>
+                    <button class="btn" igxButton="raised" (click)="stepper.next()"
+                        [disabled]="stepper.linear"  >suivant</button>
+                </div>
+            </div>
+        </igx-step>
+    
+     
+    
+    
+    
+        <igx-step #step3>
+            <span igxStepTitle>confirmation</span>
+            <div igxStepContent>
+               
+                <input style="color: black;
+                background-color: rgb(0, 145, 255);" type="file" (change)="selectImage($event)" required >
+                <p class="err" *ngIf="!controleFileType">* le type de l'image doit étre jpg ou png </p>
+                <p class="err" *ngIf="!controleFileSize">* la taile de l'image ne doit pas dépasser 2mg</p>
+                
+    
+                <div class="sample-step-actions">
+                    <button class="btn" igxButton="raised" (click)="stepper.prev()">précédent</button>
+                    <button class="btn" igxButton="raised" (click)="stepper.reset()">Reset</button>
+                    <button class="btn" igxButton="raised" (click)="sendData()"  (click)="alert.open()">confirme</button>
+                    <igx-dialog #alert
+                    [title]="Alerttitle"
+                    [message]="message "
+                    leftButtonLabel="OK"
+                    leftButtonColor="black"
+                    leftButtonBackgroundColor="#0091FF"
+                    (leftButtonSelect)="alert.close()" >
+                    </igx-dialog>
+                </div>
+            </div>
+        </igx-step>
+    
+        
+    
+    </igx-stepper>
+</div>
+</div>
