--- a/GestionDesCongee/GCongée/project/src/app/affect-formation/affect-formation.component.css
+++ b/GestionDesCongee/GCongée/project/src/app/affect-formation/affect-formation.component.css
@@ -27,3 +27,13 @@
 	color: red !important;
 	font-size: 15px;
 }
+@media (max-width: 600px) {
+    igx-dialog{
+          width: 100%;
+      }
+    .signInForm{
+      width: 100%;
+      height: 20vh;
+    }
+    /* additional styles for dialog content */
+    }
