--- a/GestionDesCongee/GCongée/project/src/app/emp-demande-conge/emp-demande-conge.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/emp-demande-conge/emp-demande-conge.component.html
@@ -1,7 +1,20 @@
 <app-navbar></app-navbar>
 <div class="contain" >
-<app-user-desc></app-user-desc>
+    <div class="card">
+        <div class="card-header">
+          <h2>Comment passer un congé</h2>
+        </div>
+        <div class="card-body">
+          <p>Pour passer un congé sur ce site, il faut suivre quelques étapes simples :</p>
+          <ol>
+            <li>Sélectionnez le type de congé que vous souhaitez prendre à l'aide de l'option de sélection fournie.</li>
+            <li>Choisissez la date de début et la date de fin de votre congé en utilisant le sélecteur de date. Vous devez vous assurer que la date de retour est supérieure à la date de départ pour que votre demande soit valide.</li>
+            <li>Téléchargez une image qui servira de pièce justificative pour votre demande de congé. L'image doit être de type JPG ou PNG et ne doit pas dépasser 2 Mo.</li>
+          </ol>
+        </div>
+    </div>
 <div class="congee_contain">
 <app-demandeconge></app-demandeconge>
 </div>
 </div>
+
