--- a/GestionDesCongee/GCongée/project/src/app/emp-demande-conge/emp-demande-conge.component.css
+++ b/GestionDesCongee/GCongée/project/src/app/emp-demande-conge/emp-demande-conge.component.css
@@ -9,7 +9,42 @@
     margin: 30px auto;
     width: 1600px;
     height: 80vh;
+    border-radius: 20px;
     border: 0.25px solid rgba(1, 1, 1, 0.132);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
+
+@media (max-width: 600px) {
+    .contain{
+        flex-direction: column;
+      
+    }
+    .congee_contain{
+        width: 360px;
+    }
+
+}
+
+
+.card {
+	width: 450px;
+	height: 85vh;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+    margin: 20px;
+  }
+  .card-header {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+  }
+  .card-body {
+    padding: 15px;
+  }
+  .card-body ol {
+    list-style-type: decimal;
+    padding-left: 30px;
+  }
 
