--- a/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.css
+++ b/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.css
@@ -1,9 +1,10 @@
 .navbar{
     width: 100%;
-    height: 48px;
+    height: 57px;
     box-shadow: 0px 15px 10px -15px #111;      
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .UserDes{
     margin-left: 10px;
@@ -16,16 +17,16 @@
     margin-top: 2px;
 }
 .img img{
-    width: 45px;
-    height: 45px;
-    border-radius: 45px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
 }
 
 .logo h1{
-    margin: auto 20px;
+    margin-left: 20px;
     font-size: 30px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    transform: translateY(-35px);
+    transform: translateY(10px);
 }
 .logo h1 span{
     color: rgb(122, 131, 131);
@@ -113,6 +114,7 @@ align-items: center;
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
+  
   @media screen and (max-width: 600px) {
 
     .dropdown-content{
@@ -122,4 +124,3 @@ align-items: center;
     }
    
 }
-  
