--- a/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.html
+++ b/GestionDesCongee/GCongée/project/src/app/rh-navbar/rh-navbar.component.html
@@ -3,7 +3,7 @@
      <h1>Ci<span>men</span>terie</h1>
     </div>
              
-    <div style="display: flex; margin-right: 20px;">
+    <div style="display: flex;">
    
         
      
