--- a/GestionDesCongee/GCongée/project/src/app/chef-navbar/chef-navbar.component.css
+++ b/GestionDesCongee/GCongée/project/src/app/chef-navbar/chef-navbar.component.css
@@ -1,9 +1,10 @@
 .navbar{
     width: 100%;
-    height: 48px;
+    height: 57px;
     box-shadow: 0px 15px 10px -15px #111;      
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .UserDes{
     margin-left: 10px;
@@ -16,16 +17,16 @@
     margin-top: 2px;
 }
 .img img{
-    width: 45px;
-    height: 45px;
-    border-radius: 45px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
 }
 
 .logo h1{
-    margin: auto 20px;
+    margin-left: 20px;
     font-size: 30px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    transform: translateY(-35px);
+    transform: translateY(10px);
 }
 .logo h1 span{
     color: rgb(122, 131, 131);
@@ -40,12 +41,11 @@
  display: flex;
 align-items: center;
  justify-content: center;
- 
- 
-    right: -13px;
+    right: -10px;
     top: 10px;
   
 }
+
 
 .notifBox{
     height: 35px;
@@ -68,7 +68,6 @@ align-items: center;
     background-color: #aaa;
     border: none;
 }
-
 /**********************************************************************************************/
 
 
@@ -92,7 +91,7 @@ align-items: center;
     margin-right: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 10px;
-    z-index: 1;
+    z-index: 999;
   }
   
   /* Links inside the dropdown */
@@ -103,17 +102,19 @@ align-items: center;
     display: block;
     cursor: pointer;
     border-bottom: 1px solid #999;
+    z-index: 1000;
   }
 
 
   
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;
-
+  border-radius: 10px;
 }
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
+  
 @media screen and (max-width: 600px) {
   .dropdown-content{
         width: 380px;
@@ -122,6 +123,5 @@ align-items: center;
     }
    
 }
+
   
-
-
